# software_engineering

cmake/: CMakeLists.txt
cmake/main/: CMakeLists.txt
cmake/test/: CMakeLists.txt
include/: Ernaehrung.h  Gericht.h  Lebensmittel.h  Menue.h  Zutat.h
src/: Ernaehrung.cpp  Gericht.cpp  Lebensmittel.cpp  main.cpp  test.cpp
xcode/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
xcode/Mensa_2_0.build/Debug/ALL_BUILD.build/: Script-28E7B251247844F5B10DF206.sh  dgph
xcode/Mensa_2_0.build/Debug/ZERO_CHECK.build/: Script-37D331A24C93442A93D9E438.sh  dgph
xcode/Mensa_2_0.xcodeproj/: project.pbxproj
xcode/Mensa_2_0.xcodeproj/project.xcworkspace/xcuserdata/abdullah.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/Mensa_2_0.xcodeproj/xcuserdata/abdullah.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/main/: cmake_install.cmake
xcode/main/Debug/: MAIN
xcode/main/Mensa_2_0.build/Debug/MAIN.build/: dgph
xcode/main/Mensa_2_0.build/Debug/MAIN.build/Objects-normal/x86_64/: Gericht.d  MAIN.LinkFileList  main.d
xcode/test/: CTestTestfile.cmake  cmake_install.cmake
xcode/test/Debug/: TEST
xcode/test/Mensa_2_0.build/Debug/TEST.build/: dgph
xcode/test/Mensa_2_0.build/Debug/TEST.build/Objects-normal/x86_64/: Ernaehrung.d  Lebensmittel.d  TEST.LinkFileList  test.d
